# billiard-shot-analyzer

./: .gitignore  CMakeLists.txt  README.md  out.txt  performance.txt
include/: balls_localization.h  balls_localizer.h  bounding_boxes_drawer.h  dataset_evaluation.h  evaluate_dataset.h  file_loading.h  frame_detection.h  frame_segmentation.h  geometry.h  masking.h  minimap.h  performance_measurement.h  playing_field_localization.h  playing_field_localizer.h  playing_field_segmentation.h  segmentation.h  show_cat.h  utils.h  video_builder.h  video_generation.h
src/: balls_localization.cpp  balls_localizer.cpp  bounding_boxes_drawer.cpp  dataset_evaluation.cpp  evaluate_dataset.cpp  evaluation.cpp  file_loading.cpp  frame_detection.cpp  frame_segmentation.cpp  generate_masks_and_detection.cpp  generate_masks_and_detections.cpp  generate_performance.cpp  generate_videos.cpp  geometry.cpp  main.cpp  masking.cpp  minimap.cpp  performance_measurement.cpp  playing_field_localization.cpp  playing_field_localizer.cpp  playing_field_segmentation.cpp  segmentation.cpp  show_cat.cpp  utils.cpp  video_builder.cpp  video_generation.cpp
